; ModuleID = '/home/carl/AnghaBench/freebsd/sys/sparc64/pci/extr_schizo.c_schizo_maxslots.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/sparc64/pci/extr_schizo.c_schizo_maxslots.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.schizo_softc = type { i64, i64 }

@SCHIZO_MODE_SCZ = common dso_local global i64 0, align 8
@PCI_SLOTMAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @schizo_maxslots to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @schizo_maxslots(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.schizo_softc*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call %struct.schizo_softc* @device_get_softc(i32 %5)
  store %struct.schizo_softc* %6, %struct.schizo_softc** %4, align 8
  %7 = load %struct.schizo_softc*, %struct.schizo_softc** %4, align 8
  %8 = getelementptr inbounds %struct.schizo_softc, %struct.schizo_softc* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @SCHIZO_MODE_SCZ, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %19

12:                                               ; preds = %1
  %13 = load %struct.schizo_softc*, %struct.schizo_softc** %4, align 8
  %14 = getelementptr inbounds %struct.schizo_softc, %struct.schizo_softc* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp eq i64 %15, 0
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32 4, i32 6
  store i32 %18, i32* %2, align 4
  br label %21

19:                                               ; preds = %1
  %20 = load i32, i32* @PCI_SLOTMAX, align 4
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %19, %12
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local %struct.schizo_softc* @device_get_softc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
